Entry form creation fixes and scrollview overlap of pinned entries fixed  #21

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -269,6 +269,7 @@ button.close {
 }
 .entry-input-surface .input-group-addon {
 	background: #ffffff;
+	border-color: #ffffff;
 	border-right: 0px;
 	color:    #C04F7F;
 	padding-right: 0px;
@@ -280,6 +281,9 @@ button.close {
 	color:    #C04F7F;
 	-webkit-box-shadow: inset 0 0 0 0 !important;
 	box-shadow: inset 0 0 0 0 !important;
+	border-bottom-right-radius: 2px;
+	border-top-right-radius: 2px;
+	border-color: #ffffff;
 	line-height: 25px;
 	font-size: 13px;
 }
@@ -378,6 +382,7 @@ button.close {
 	-ms-transform: rotate(-45deg); /* IE 9 */
 	-webkit-transform: rotate(-45deg); /* Chrome, Safari, Opera */
 	transform: rotate(-45deg);
+	float: left;
 }
 
 /*Context Menu*/
@@ -401,6 +406,10 @@ button.close {
 }
 
 * {
-    -webkit-touch-callout: none;
-    -webkit-user-select: none; /* Disable selection/copy in UIWebView */
+	-webkit-touch-callout: none;
+	-webkit-user-select: none; /* Disable selection/copy in UIWebView */
+}
+
+input {
+	-webkit-user-select: auto !important;
 }
